--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Poppins', sans-serif;
+    margin: 0%;
 }
 
 h1 {
@@ -36,5 +37,11 @@ section {
     background-color: rgb(98, 43, 226);
     padding: 10px 20px;
     border-radius: 10px;
+}
+
+.top-banner {
+    background: url(images/top-bg.png);
+    background-repeat: no-repeat;
+    background-size: 80%;
 
 }
