--- a/style.css
+++ b/style.css
@@ -11,15 +11,15 @@ h1 {
 }
 
 h3 {
-    font-size: 20px;
+    font-size: 30px;
     font-weight: 600;
     color: rgb(59, 59, 59);
-    margin-top: auto;
+    margin-top: 20px;
     margin-bottom: auto;
 }
 
 .small-size {
-    font-size: 10px;
+    font-size: 20px;
 }
 
 .color {
@@ -37,6 +37,7 @@ section {
 
 .half-width img {
     width: 90%;
+
 }
 
 .link-button {
