--- a/style.css
+++ b/style.css
@@ -28,16 +28,17 @@ h3 {
 
 section {
     display: flex;
+    margin-bottom: 50px;
 }
 
 .half-width {
     width: 50%;
-    padding-left: 5%;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .half-width img {
-    width: 90%;
-
+    width: 100%;
 }
 
 .link-button {
@@ -54,4 +55,11 @@ section {
     background-repeat: no-repeat;
     background-size: contain;
 
+}
+
+.about-me {
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+    background-size: 10%
 }
