--- a/style.css
+++ b/style.css
@@ -10,9 +10,15 @@ h1 {
     margin-top: 100px;
 }
 
+h2 {
+    font-size: 40px;
+    color: rgb(59, 59, 59);
+    font-weight: 600;
+}
+
 h3 {
     font-size: 30px;
-    font-weight: 600;
+    font-weight: 500;
     color: rgb(59, 59, 59);
     margin-top: 20px;
     margin-bottom: auto;
@@ -62,4 +68,25 @@ h3 {
     background-repeat: no-repeat;
     background-position: right;
     background-size: 10%
+}
+
+.experience-item {
+    width: 40%;
+    margin-top: 2%;
+    margin-right: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    box-shadow: 10px 10px 50px rgb(218, 218, 218);
+    border-radius: 10px;
+    border-left: 7px solid rgb(98, 43, 226);
+
+}
+
+.experience-area {
+    margin-left: 5%;
+
+}
+
+#full-stack-developer {
+    border-left: 7px solid rgb(98, 43, 226);
 }
